# workflow-operating-system

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
benchmarks/: README.md  __init__.py  analytics_generation.py  common.py  memory_retrieval.py  runner.py  workflow_execution.py
docs/: approval_system.md  architecture.md  decision_intelligence.md  exception_handling.md  getting_started.md  multi_agent_collaboration.md  organizational_learning.md  organizational_memory.md  sop_memory.md  tutorial.md  workflow_analytics.md
examples/: analytics_demo.py  approval_demo.py  decision_demo.py  employee_onboarding.json  exception_demo.py  learning_demo.py  memory_demo.py  multi_agent_demo.py  run_all_demos.py  sop_demo.py
tests/: test_actor_metadata.py  test_actor_retrieval.py  test_agent_accountability.py  test_agent_compliance.py  test_agent_coordinator.py  test_agent_delegation.py  test_agent_demo.py  test_agent_execution.py  test_agent_logs.py  test_agent_memory.py  test_agent_messaging.py  test_agent_metrics.py  test_agent_planner.py  test_agent_record.py  test_agent_registry.py  test_agent_reports.py  test_agent_roles.py  test_agent_shared_memory.py  test_agent_workspace.py  test_agents_integration.py  test_analytics_bottlenecks.py  test_analytics_comparison.py  test_analytics_completion.py  test_analytics_csv_export.py  test_analytics_demo.py  test_analytics_duration.py  test_analytics_execution_summary.py  test_analytics_failure.py  test_analytics_health.py  test_analytics_integration.py  test_analytics_json_export.py  test_analytics_reports.py  (+140 more)
(+166 files in other folders)
